docs: update project scaffolding spec based on review feedback
Fix: add flyway-database-postgresql, --enable-preview, logback-spring.xml,
spring-security-crypto, lombok, tailwindcss-animate, pitest property.
Remove cartisan-dependencies BOM (parent manages versions), middleware.ts
(redundant with next.config.mjs rewrites), rsync --delete flag.
Use docker compose v2 syntax, hardcode server.port.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>